footer form - done

--- a/index.html
+++ b/index.html
@@ -703,6 +703,33 @@
               </li>
             </ul>
           </div>
+          <div class="sign-up-mail">
+            <p class="sign-up-text">
+              Подпишитесь на рассылку
+            </p>
+            <form class="sign-up-container">
+              <label
+                ><input
+                  type="mail"
+                  class="sign-up-input"
+                  placeholder="E-mail"
+              /></label>
+              <button class="submit-btn" type="submit">
+                <span class="submit-btn-text"
+                  >Подписаться</span
+                >
+                <svg
+                  class="submit-bnt-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use
+                    href="./images/icon/icons.svg#icon-send"
+                  ></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
@@ -714,7 +741,11 @@
           class="close-modal-btn"
           data-modal-close
         >
-          <svg class="icon-close-cross" width="18" height="18">
+          <svg
+            class="icon-close-cross"
+            width="18"
+            height="18"
+          >
             <use
               href="./images/icon/icons.svg#icon-close-cross"
             ></use>
