--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
             <form class="sign-up-container">
               <label
                 ><input
-                  type="mail"
+                  type="email"
                   class="sign-up-input"
                   placeholder="E-mail"
               /></label>
@@ -735,7 +735,7 @@
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
-      <div class="modal-window">
+      <form class="modal-window">
         <button
           type="button"
           class="close-modal-btn"
@@ -751,14 +751,87 @@
             ></use>
           </svg>
         </button>
-        <h3>Тут модальне вікно</h3>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur
-          adipisicing elit. Quo adipisci quos nemo, facere
-          qui consequatur aut dolore est reiciendis
-          repellat.
-        </p>
-      </div>
+
+        <h3 class="modal-header">
+          Оставьте свои данные, мы вам перезвоним
+        </h3>
+        <label
+          ><span class="label-text">Имя</span>
+          <div class="for-input-icon">
+            <input
+              type="text"
+              name="UserName"
+              class="modal-input"
+            /><svg
+              class="icon-input"
+              width="18"
+              height="18"
+            >
+              <use
+                href="./images/icon/icons.svg#icon-modal-person"
+              ></use>
+            </svg>
+          </div>
+        </label>
+        <label
+          ><span class="label-text">Телефон</span>
+          <div class="for-input-icon">
+            <input
+              type="tel"
+              name="UserPhonenumber"
+              class="modal-input"
+            />
+            <svg class="icon-input" width="18" height="18">
+              <use
+                href="./images/icon/icons.svg#icon-modal-phone"
+              ></use>
+            </svg></div
+        ></label>
+        <label
+          ><span class="label-text">Почта</span>
+          <div class="for-input-icon">
+            <input
+              type="email"
+              name="UserMail"
+              class="modal-input"
+            />
+            <svg class="icon-input" width="18" height="18">
+              <use
+                href="./images/icon/icons.svg#icon-modal-email"
+              ></use>
+            </svg></div
+        ></label>
+        <label class="label-text" for="UserComment"
+          >Комментарий</label
+        >
+        <textarea
+          name="UserComment"
+          id="UserComment"
+          placeholder="Введите текст"
+          class="modal-comment"
+        ></textarea>
+        <div class="modal-privacy">
+          <input
+            type="checkbox"
+            name="PrivacyPolicy"
+            id="PrivacyPolicy"
+            class="modal-privacy-input hidden"
+          />
+          <svg class="icon-checkbox" width="16" height="15">
+            <use
+              href="./images/icon/icons.svg#icon-checked"
+            ></use>
+          </svg>
+          <label
+            for="PrivacyPolicy"
+            class="modal-privacy-text"
+            >Соглашаюсь с рассылкой и принимаю <a href="" class="privacy-link link">Условия договора</a></label
+          >
+        </div>
+        <button type="submit" class="submit-modal-btn">
+          Отправить
+        </button>
+      </form>
     </div>
     <script src="./js/modal.js"></script>
   </body>
