синя іконка чекбокса додана

--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
             type="checkbox"
             name="PrivacyPolicy"
             id="PrivacyPolicy"
-            class="modal-privacy-input hidden"
+            class="modal-privacy-input "
           />
           <svg class="icon-checkbox" width="16" height="15">
             <use
