fixed focus color "close cross"

--- a/index.html
+++ b/index.html
@@ -713,6 +713,7 @@
                   type="email"
                   class="sign-up-input"
                   placeholder="E-mail"
+                  name="sign-up-mail"
               /></label>
               <button class="submit-btn" type="submit">
                 <span class="submit-btn-text"
@@ -858,6 +859,7 @@
         </button>
       </form>
     </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
