--- a/portfolio.html
+++ b/portfolio.html
@@ -420,6 +420,34 @@
               </li>
             </ul>
           </div>
+          <div class="sign-up-mail">
+            <p class="sign-up-text">
+              Подпишитесь на рассылку
+            </p>
+            <form class="sign-up-container">
+              <label
+                ><input
+                  type="email"
+                  class="sign-up-input"
+                  placeholder="E-mail"
+                  name="sign-up-mail"
+              /></label>
+              <button class="submit-btn" type="submit">
+                <span class="submit-btn-text"
+                  >Подписаться</span
+                >
+                <svg
+                  class="submit-bnt-icon"
+                  width="24"
+                  height="24"
+                >
+                  <use
+                    href="./images/icon/icons.svg#icon-send"
+                  ></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
