--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
           <div class="for-input-icon">
             <input
               type="text"
-              name="UserName"
+              name="user-name"
               class="modal-input"
             /><svg
               class="icon-input"
@@ -779,7 +779,7 @@
           <div class="for-input-icon">
             <input
               type="tel"
-              name="UserPhonenumber"
+              name="user-phonenumber"
               class="modal-input"
             />
             <svg class="icon-input" width="18" height="18">
@@ -793,7 +793,7 @@
           <div class="for-input-icon">
             <input
               type="email"
-              name="UserMail"
+              name="user-mail"
               class="modal-input"
             />
             <svg class="icon-input" width="18" height="18">
@@ -802,12 +802,12 @@
               ></use>
             </svg></div
         ></label>
-        <label class="label-text" for="UserComment"
+        <label class="label-text" for="user-comment"
           >Комментарий</label
         >
         <textarea
-          name="UserComment"
-          id="UserComment"
+          name="user-comment"
+          id="user-comment"
           placeholder="Введите текст"
           class="modal-comment"
         ></textarea>
@@ -840,12 +840,12 @@
         <div class="modal-privacy">
           <input
             type="checkbox"
-            name="PrivacyPolicy"
-            id="PrivacyPolicy"
+            name="privacy-policy"
+            id="privacy-policy"
             class="modal-privacy-input hidden"
           />
           <label
-            for="PrivacyPolicy"
+            for="privacy-policy"
             class="modal-privacy-text"
             >Соглашаюсь с рассылкой и принимаю&#8194;
             <a href="" class="privacy-link link"
